# pump

./: .gitignore  DEV.md  README.md
.github/workflows/: build.yml
backend/: go.mod  go.sum
backend/cmd/: main.go
backend/config/: config.go  config.yaml
backend/internal/errors/: mint.go
backend/internal/handler/: contract.go  mint.go
backend/internal/model/: contract.go  mint.go  token.go  user.go
backend/internal/router/: router.go
backend/internal/service/: contract.go  mint.go  solana.go
backend/internal/types/: mint.go
backend/pkg/solana/: client.go
pump-frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
pump-frontend/src/: App.tsx  index.css  main.tsx
pump-frontend/src/app/: app-routes.tsx
pump-frontend/src/components/: Layout.tsx  Navbar.tsx  WalletProvider.tsx
pump-frontend/src/components/Layout/: index.tsx
pump-frontend/src/hooks/: useWallet.ts
pump-frontend/src/pages/: ContractDetail.tsx  Contracts.tsx  Deploy.tsx  Home.tsx  Mint.tsx  MintHistory.tsx  Profile.tsx
pump-frontend/src/services/: api.ts
pump-frontend/src/types/: index.ts
pump-token/: .gitignore  Anchor.toml  README.md  install.md
pump-token/programs/pump-token/: Cargo.toml
pump-token/programs/pump-token/src/: errors.rs  lib.rs
pump-token/programs/pump-token/src/modules/: base_token.rs  liquidity.rs  mint.rs  mod.rs  staking.rs
pump-token/programs/pump-token/src/state/: base_token.rs  liquidity.rs  staking.rs
pump-token/tests/: pump-token.ts
src/: App.tsx  index.css  main.tsx
src/pages/: Transactions.tsx
(+7 files in other folders)
